// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`TapToEdit renders correctly with text value 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    "Name",
                  ],
                  "props": {
                    "numberOfLines": 0,
                    "selectable": undefined,
                    "style": {
                      "color": "#1C1C1C",
                      "fontFamily": "text-bold",
                      "fontSize": 14,
                      "textAlign": "left",
                    },
                    "testID": undefined,
                  },
                  "type": "Text",
                },
              ],
              "props": {},
              "type": "View",
            },
          ],
          "props": {
            "style": {
              "flex": 1,
              "justifyContent": "center",
            },
            "testID": undefined,
          },
          "type": "View",
        },
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    "John Doe",
                  ],
                  "props": {
                    "numberOfLines": 0,
                    "selectable": undefined,
                    "style": {
                      "color": "#1C1C1C",
                      "fontFamily": "text-regular",
                      "fontSize": 14,
                      "textAlign": "right",
                    },
                    "testID": undefined,
                  },
                  "type": "Text",
                },
              ],
              "props": {
                "accessibilityLabel": "Link",
                "onPointerEnter": [Function: AsyncFunction],
                "onPointerLeave": [Function: AsyncFunction],
                "style": {
                  "justifyContent": "flex-start",
                },
                "testID": undefined,
              },
              "type": "View",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "accessibilityHint": "",
                "aria-label": "Edit",
                "aria-role": "button",
                "onLayout": undefined,
                "onPointerEnter": [Function: AsyncFunction],
                "onPointerLeave": [Function: AsyncFunction],
                "onPress": [Function: AsyncFunction],
                "style": {
                  "marginLeft": 8,
                  "width": 16,
                },
                "testID": undefined,
              },
              "type": "Pressable",
            },
          ],
          "props": {
            "style": {
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "flex-end",
            },
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "flexDirection": "row",
          "gap": 16,
          "width": "100%",
        },
        "testID": undefined,
      },
      "type": "View",
    },
  ],
  "props": {
    "style": {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "space-between",
      "width": "100%",
    },
    "testID": undefined,
  },
  "type": "View",
}
`;

exports[`TapToEdit renders non-editable when editable is false 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    "Read Only",
                  ],
                  "props": {
                    "numberOfLines": 0,
                    "selectable": undefined,
                    "style": {
                      "color": "#1C1C1C",
                      "fontFamily": "text-bold",
                      "fontSize": 14,
                      "textAlign": "left",
                    },
                    "testID": undefined,
                  },
                  "type": "Text",
                },
              ],
              "props": {},
              "type": "View",
            },
          ],
          "props": {
            "style": {
              "flex": 1,
              "justifyContent": "center",
            },
            "testID": undefined,
          },
          "type": "View",
        },
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    "Cannot edit this",
                  ],
                  "props": {
                    "numberOfLines": 0,
                    "selectable": undefined,
                    "style": {
                      "color": "#1C1C1C",
                      "fontFamily": "text-regular",
                      "fontSize": 14,
                      "textAlign": "right",
                    },
                    "testID": undefined,
                  },
                  "type": "Text",
                },
              ],
              "props": {
                "accessibilityLabel": "Link",
                "onPointerEnter": [Function: AsyncFunction],
                "onPointerLeave": [Function: AsyncFunction],
                "style": {
                  "justifyContent": "flex-start",
                },
                "testID": undefined,
              },
              "type": "View",
            },
          ],
          "props": {
            "style": {
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "flex-end",
            },
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "flexDirection": "row",
          "gap": 16,
          "width": "100%",
        },
        "testID": undefined,
      },
      "type": "View",
    },
  ],
  "props": {
    "style": {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "space-between",
      "width": "100%",
    },
    "testID": undefined,
  },
  "type": "View",
}
`;

exports[`TapToEdit renders edit icon when editable 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    "Editable Field",
                  ],
                  "props": {
                    "numberOfLines": 0,
                    "selectable": undefined,
                    "style": {
                      "color": "#1C1C1C",
                      "fontFamily": "text-bold",
                      "fontSize": 14,
                      "textAlign": "left",
                    },
                    "testID": undefined,
                  },
                  "type": "Text",
                },
              ],
              "props": {},
              "type": "View",
            },
          ],
          "props": {
            "style": {
              "flex": 1,
              "justifyContent": "center",
            },
            "testID": undefined,
          },
          "type": "View",
        },
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    "Click to edit",
                  ],
                  "props": {
                    "numberOfLines": 0,
                    "selectable": undefined,
                    "style": {
                      "color": "#1C1C1C",
                      "fontFamily": "text-regular",
                      "fontSize": 14,
                      "textAlign": "right",
                    },
                    "testID": undefined,
                  },
                  "type": "Text",
                },
              ],
              "props": {
                "accessibilityLabel": "Link",
                "onPointerEnter": [Function: AsyncFunction],
                "onPointerLeave": [Function: AsyncFunction],
                "style": {
                  "justifyContent": "flex-start",
                },
                "testID": undefined,
              },
              "type": "View",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "accessibilityHint": "",
                "aria-label": "Edit",
                "aria-role": "button",
                "onLayout": undefined,
                "onPointerEnter": [Function: AsyncFunction],
                "onPointerLeave": [Function: AsyncFunction],
                "onPress": [Function: AsyncFunction],
                "style": {
                  "marginLeft": 8,
                  "width": 16,
                },
                "testID": undefined,
              },
              "type": "Pressable",
            },
          ],
          "props": {
            "style": {
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "flex-end",
            },
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "flexDirection": "row",
          "gap": 16,
          "width": "100%",
        },
        "testID": undefined,
      },
      "type": "View",
    },
  ],
  "props": {
    "style": {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "space-between",
      "width": "100%",
    },
    "testID": undefined,
  },
  "type": "View",
}
`;

exports[`TapToEdit shows editing mode when isEditing is true 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                "Field",
              ],
              "props": {
                "numberOfLines": 0,
                "selectable": undefined,
                "style": {
                  "color": "#1C1C1C",
                  "fontFamily": "text-bold",
                  "fontSize": 14,
                  "textAlign": "left",
                },
                "testID": undefined,
              },
              "type": "Text",
            },
          ],
          "props": {},
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "flex": 1,
          "justifyContent": "center",
        },
        "testID": undefined,
      },
      "type": "View",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "accessibilityHint": "Enter text here",
                        "accessibilityState": {
                          "disabled": undefined,
                        },
                        "aria-label": "Text input field",
                        "autoCapitalize": "sentences",
                        "autoCorrect": true,
                        "blurOnSubmit": true,
                        "enterKeyHint": undefined,
                        "keyboardType": "default",
                        "multiline": undefined,
                        "nativeID": undefined,
                        "numberOfLines": 1,
                        "onBlur": [Function],
                        "onChangeText": [Function],
                        "onContentSizeChange": [Function],
                        "onFocus": [Function],
                        "onSubmitEditing": [Function],
                        "placeholder": undefined,
                        "placeholderTextColor": "#686868",
                        "readOnly": undefined,
                        "ref": [Function],
                        "secureTextEntry": false,
                        "style": {
                          "color": "#1C1C1C",
                          "flex": 1,
                          "fontFamily": "text",
                          "fontSize": 16,
                          "gap": 10,
                          "height": 24,
                          "paddingVertical": 0,
                          "width": "100%",
                        },
                        "testID": undefined,
                        "textContentType": "none",
                        "underlineColorAndroid": "transparent",
                        "value": "Editing...",
                      },
                      "type": "TextInput",
                    },
                  ],
                  "props": {
                    "style": {
                      "alignItems": "center",
                      "flexDirection": "row",
                    },
                    "testID": undefined,
                  },
                  "type": "View",
                },
              ],
              "props": {
                "style": {
                  "backgroundColor": "#FFFFFF",
                  "borderColor": "#949494",
                  "borderRadius": 4,
                  "borderWidth": 1,
                  "flexDirection": "column",
                  "gap": 0,
                  "overflow": "hidden",
                  "paddingHorizontal": 12,
                  "paddingVertical": 8,
                },
                "testID": undefined,
              },
              "type": "View",
            },
          ],
          "props": {
            "style": {
              "flexDirection": "column",
              "width": "100%",
            },
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "gap": 16,
        },
        "testID": undefined,
      },
      "type": "View",
    },
  ],
  "props": {
    "style": {
      "flexDirection": "column",
      "width": "100%",
    },
    "testID": undefined,
  },
  "type": "View",
}
`;

exports[`TapToEdit displays helper text when provided 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    "Name",
                  ],
                  "props": {
                    "numberOfLines": 0,
                    "selectable": undefined,
                    "style": {
                      "color": "#1C1C1C",
                      "fontFamily": "text-bold",
                      "fontSize": 14,
                      "textAlign": "left",
                    },
                    "testID": undefined,
                  },
                  "type": "Text",
                },
              ],
              "props": {},
              "type": "View",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    "Enter your full name",
                  ],
                  "props": {
                    "numberOfLines": 0,
                    "selectable": undefined,
                    "style": {
                      "color": "#686868",
                      "fontFamily": "text-regular",
                      "fontSize": 10,
                      "textAlign": "left",
                    },
                    "testID": undefined,
                  },
                  "type": "Text",
                },
              ],
              "props": {},
              "type": "View",
            },
          ],
          "props": {
            "style": {
              "flex": 1,
              "justifyContent": "center",
            },
            "testID": undefined,
          },
          "type": "View",
        },
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "numberOfLines": 0,
                    "selectable": undefined,
                    "style": {
                      "color": "#1C1C1C",
                      "fontFamily": "text-regular",
                      "fontSize": 14,
                      "textAlign": "right",
                    },
                    "testID": undefined,
                  },
                  "type": "Text",
                },
              ],
              "props": {
                "accessibilityLabel": "Link",
                "onPointerEnter": [Function: AsyncFunction],
                "onPointerLeave": [Function: AsyncFunction],
                "style": {
                  "justifyContent": "flex-start",
                },
                "testID": undefined,
              },
              "type": "View",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "accessibilityHint": "",
                "aria-label": "Edit",
                "aria-role": "button",
                "onLayout": undefined,
                "onPointerEnter": [Function: AsyncFunction],
                "onPointerLeave": [Function: AsyncFunction],
                "onPress": [Function: AsyncFunction],
                "style": {
                  "marginLeft": 8,
                  "width": 16,
                },
                "testID": undefined,
              },
              "type": "Pressable",
            },
          ],
          "props": {
            "style": {
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "flex-end",
            },
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "flexDirection": "row",
          "gap": 16,
          "width": "100%",
        },
        "testID": undefined,
      },
      "type": "View",
    },
  ],
  "props": {
    "style": {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "space-between",
      "width": "100%",
    },
    "testID": undefined,
  },
  "type": "View",
}
`;

exports[`TapToEdit renders with textarea type 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    "Description",
                  ],
                  "props": {
                    "numberOfLines": 0,
                    "selectable": undefined,
                    "style": {
                      "color": "#1C1C1C",
                      "fontFamily": "text-bold",
                      "fontSize": 14,
                      "textAlign": "left",
                    },
                    "testID": undefined,
                  },
                  "type": "Text",
                },
              ],
              "props": {},
              "type": "View",
            },
          ],
          "props": {
            "style": {
              "flex": 1,
              "justifyContent": "center",
            },
            "testID": undefined,
          },
          "type": "View",
        },
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": null,
              "props": {
                "accessibilityLabel": "Link",
                "onPointerEnter": [Function: AsyncFunction],
                "onPointerLeave": [Function: AsyncFunction],
                "style": {
                  "justifyContent": "flex-start",
                },
                "testID": undefined,
              },
              "type": "View",
            },
          ],
          "props": {
            "style": {
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "flex-end",
            },
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "flexDirection": "row",
          "gap": 16,
          "width": "100%",
        },
        "testID": undefined,
      },
      "type": "View",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                "This is a long description that spans multiple lines.",
              ],
              "props": {
                "numberOfLines": 0,
                "selectable": undefined,
                "style": {
                  "color": "#1C1C1C",
                  "fontFamily": "text-regular",
                  "fontSize": 14,
                  "textAlign": "left",
                },
                "testID": undefined,
              },
              "type": "Text",
            },
          ],
          "props": {},
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "marginTop": 8,
          "paddingVertical": 8,
          "width": "100%",
        },
        "testID": undefined,
      },
      "type": "View",
    },
  ],
  "props": {
    "style": {
      "alignItems": "flex-start",
      "flexDirection": "column",
      "justifyContent": "space-between",
      "width": "100%",
    },
    "testID": undefined,
  },
  "type": "View",
}
`;
